# Wolfenstein3D

./: .gitignore  AbstractEvent.h  CMakeLists.txt  Camera.cpp  Camera.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  EventsCatcher.cpp  EventsCatcher.h  Exception.cpp  Game.cpp  Game.h  GameLoader.cpp  GameLoader.h  GameOverEvent.cpp  GameOverEvent.h  GameStage.cpp  GameStage.h  Gun.cpp  Gun.h  KeyDownEvent.cpp  KeyDownEvent.h  KeyLeftEvent.cpp  KeyLeftEvent.h  KeyRightEvent.cpp  KeyRightEvent.h  KeyUpEvent.cpp  KeyUpEvent.h  Knife.h  LoadMap.cpp  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  MovementEvent.cpp  MovementEvent.h  Player.cpp  Player.h  (+28 more)
Editor/: CMakeLists.txt
Editor/include/: Coordinate.h  DrawMode.h  Editor.h  EditorScene.h  EditorScreen.h  EraseMode.h  MenuWindow.h  Mode.h  NewMapDialog.h  NewMapWindow.h  SceneManager.h  ScreenManager.h  SpriteFileManager.h  SpriteTabs.h  Texture.h  TextureList.h  Tile.h  Tilemap.h  TilemapScene.h
Editor/maps/: map.yaml
Editor/sprites/: mainWindows.ui  sprites.yaml
Editor/src/: Coordinate.cpp  DrawMode.cpp  Editor.cpp  EditorScene.cpp  EditorScreen.cpp  EraseMode.cpp  MenuWindow.cpp  Mode.cpp  NewMapWindow.cpp  Prueba.cpp  SceneManager.cpp  ScreenManager.cpp  SpriteFileManager.cpp  SpriteTabs.cpp  Texture.cpp  TextureFileManager.cpp  TextureFileManager.h  TextureList.cpp  Tile.cpp  Tilemap.cpp  TilemapScene.cpp  TilemapScene.h  main.cpp
Editor/ui/: EditorScene.ui  EditorScreen.ui  MainWindow.ui  MenuWindow.ui  NewMapWindow.ui  SceneManager.ui  ScreenManager.ui
client/: AnimatedSprite.cpp  AnimatedSprite.h  BagOfSprites.cpp  BagOfSprites.h  CGame.cpp  CGame.h  CMakeLists.txt  CPlayer.cpp  CPlayer.h  CWeapon.cpp  Camera.cpp  Camera.h  Client.h  EnemyPlayer.cpp  EnemyPlayer.h  GameScreen.cpp  Ray.cpp  Ray.h  Renderable.cpp  Renderable.h  SoundManager.cpp  Sprite.h  UI.cpp  UI.h  Vector.cpp  Vector.h  Wall.cpp  Wall.h  main.cpp
client/include/: BagOfSprites.h  CGame.h  CPlayer.h  CWeapon.h  Client.h  DataTable.h  GameScreen.h  GamesScreen.h  InfoScreen.h  MenuScreen.h  NewMatchScreen.h  NicknameScreen.h  Ray.h  Renderable.h  ScoreWindow.h  ScreenManager.h  SoundManager.h  Sprite.h  StartScreen.h  UI.h  Vector.h  WaitingRoomScreen.h
client/src/: AnimatedSprite.cpp  BagOfSprites.cpp  CGame.cpp  CPlayer.cpp  CWeapon.cpp  Camera.cpp  Client.cpp  CommunicationChannelClient.cpp  DataTable.cpp  EnemyPlayer.cpp  GameScreen.cpp  GamesScreen.cpp  InfoScreen.cpp  MenuScreen.cpp  NewMatchScreen.cpp  NicknameScreen.cpp  Ray.cpp  Renderable.cpp  ScoreWindow.cpp  ScreenManager.cpp  SoundManager.cpp  Sprite.cpp  StartScreen.cpp  TCPClient.cpp  UI.cpp  Vector.cpp  WaitingRoomScreen.cpp  Wall.cpp  main.cpp
client/ui/: GamesScreen.ui  HighScoreWindow.ui  MenuScreen.ui  ScoreWindow.ui  ScreenManager.ui  StartScreen.ui  WaitingRoomScreen.ui  ui_GamesScreen.h  ui_InfoScreen.h  ui_NewMatchScreen.h  ui_ScoreWindow.h  ui_ScreenManager.h  ui_StartScreen.h  ui_WaitingRoomScreen.h
common/: AbstractEvent.cpp  AbstractEvent.h  BlockingEventsQueue.cpp  BlockingEventsQueue.h  CMakeLists.txt  CellMap.cpp  CellMap.h  Constants.h  Event.cpp  Event.h  EventSerializer.cpp  EventSerializer.h  EventsCatcher.cpp  EventsCatcher.h  Exception.h  GameOverEvent.cpp  GameOverEvent.h  Item.cpp  Item.h  LifeDecrementEvent.cpp  LifeDecrementEvent.h  MapEvent.cpp  MapEvent.h  MatchInfo.cpp  MovementEvent.cpp  MovementEvent.h  OpenDoorEvent.cpp  OpenDoorEvent.h  PlayerEvent.cpp  PlayerEvent.h  PositionEvent.cpp  PositionEvent.h  ProtectedEventsQueue.cpp  ProtectedEventsQueue.h  QuitEvent.cpp  QuitEvent.h  Renderer.cpp  Renderer.h  ShootingEvent.cpp  ShootingEvent.h  (+7 more)
common/Items/: AmmoItem.cpp  AmmoItem.h  KeyItem.cpp  KeyItem.h  LifeGainItem.cpp  LifeGainItem.h  LockedDoor.cpp  LockedDoor.h  OpenableItem.cpp  OpenableItem.h  PointGainItem.cpp  PointGainItem.h  Rocket.h  Wall.cpp  Wall.h
common/ServerEvents/: AmmoChangeEvent.cpp  AmmoChangeEvent.h  ChangeWeaponEvent.cpp  ChangeWeaponEvent.h  CreateMapEvent.cpp  CreateMapEvent.h  DespawnEvent.cpp  DespawnEvent.h  DoorOpenedEvent.cpp  DoorOpenedEvent.h  GameOverEvent.cpp  GameOverEvent.h  HealthChangeEvent.cpp  HealthChangeEvent.h  KillEvent.cpp  KillEvent.h  PickUpKeyEvent.cpp  PickUpKeyEvent.h  PickUpWeaponEvent.cpp  PickUpWeaponEvent.h  PositionEvent.cpp  PositionEvent.h  ScoreChangeEvent.cpp  ScoreChangeEvent.h  SpawnEvent.cpp  SpawnEvent.h  SpawnNotMovableEvent.cpp  SpawnNotMovableEvent.h  StartEvent.cpp  StartEvent.h
common/include/: AbstractEvent.h  BlockingEventsQueue.h  Constants.h  Event.h  EventSerializer.h  EventsCatcher.h  IPAddresses.h  Message.h  MovementEvent.h  OpenDoorEvent.h  Protocol.h  QuitEvent.h  ShootingEvent.h  Socket.h  Thread.h  TurnEvent.h  thread.h
common/src/: AbstractEvent.cpp  BlockingEventsQueue.cpp  Event.cpp  EventSerializer.cpp  EventsCatcher.cpp  Exception.cpp  IPAddresses.cpp  MatchInfo.cpp  Message.cpp  MovementEvent.cpp  OpenDoorEvent.cpp  ProtectedEventsQueue.cpp  Protocol.cpp  QuitEvent.cpp  ShootingEvent.cpp  Socket.cpp  Style.cpp  Thread.cpp  TurnEvent.cpp  thread.cpp
communications/Client/: CMakeLists.txt
communications/Server/: CMakeLists.txt
communications/client/: CMakeLists.txt
communications/server/: CMakeLists.txt
editor/: CMakeLists.txt
editor/include/: EraseMode.h  Mode.h  NewMapWindow.h  Prueba.h  SpriteTabs.h  TextureList.h  Tile.h  TilemapScene.h
editor/resources/: mainMenu.qrc
editor/src/: DrawMode.cpp  EditorScreen.cpp  Mode.cpp  NewMapDialog.cpp  ScreenManager.cpp  Texture.cpp  TilemapScene.cpp
editor/ui/: MenuWindow.ui  NewMapDialog.ui
menu/: CMakeLists.txt
menu/include/: Client.h  GamesScreen.h  InfoScreen.h  MenuScreen.h  NewMatchScreen.cpp  NewMatchScreen.h  NicknameScreen.h  ScreenManager.h  StartScreen.h  (+1 more)
server/: CMakeLists.txt  CellMap.cpp  CellMap.h  Game.cpp  Game.h  GameLoader.cpp  GameLoader.h  GameStage.cpp  GameStage.h  Item.cpp  Item.h  Items.cpp  Items.h  Knife.cpp  Map.cpp  Map.h  Player.cpp  Player.h  Server.cpp  Server.h  Vector.cpp  Vector.h  WallRay.cpp  WallRay.h  Weapon.cpp  Weapon.h  config.yaml  main.cpp
(+235 files in other folders)
